# android-ios-course-messageboard

./: Cargo.toml  MessageBoard.postman_collection.json  Package.resolved  Package.swift  README.md  boredboard.service  docker-compose.yml
.github/workflows/: deploy.yml  rust_checks.yml
Sources/App/: configure.swift  routes.swift
Sources/App/Controllers/: PostController.swift
Sources/App/Migrations/: CreatePosts.swift
Sources/App/Models/: Post.swift
src/: main.rs
