[package]
name = "boredboard"
version = "0.1.0"
authors = ["Jack Greenberg <kcaj@grebneerg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.16.20"
hex = "0.4.3"
linked-hash-map = "0.5.4"
